@@ -1,3 +1,8 @@
+2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Tidied up feature discovery and xep0115 caps support
+	and ensure we handle conversation threads for chat sessions.
+
 2009-05-24  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Improve the response to subscription requests and
